<resources>
    <string name="app_name">EncDecApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="key_sizes_128_192_or_256_bits">Key sizes: 128, 192 or 256 bits</string>
    <string name="clear">Clear</string>
    <string name="encrypt">Encrypt</string>
    <string name="random">Random</string>
    <string name="decrypt">Decrypt</string>
    <string name="decrypted_text">Decrypted text</string>
    <string name="decode_from_base64_format">Decode from Base64 format</string>
    <string name="encode_to_base64_format">Encode to Base64 format</string>
    <string name="result_goes_here">Result goes here</string>
    <string name="encode_to_utf8">Encode to UTF8</string>
    <string name="sha256">SHA256</string>
    <string name="caesar_cipher">Caesar Cipher</string>
    <string name="md5">MD5</string>
</resources>