<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".fragments.ascii_code.ASCIICodeDecFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ciphertextForDecEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:hint="@string/enter_your_text"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/decrypt_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/ic_baseline_lock_open_24"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plainTextForDecEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:hint="@string/decrypted_text"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>