<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CipherEncFragment">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:layout_weight="0.5"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plaintextForEncEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:hint="@string/enter_your_text"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/keyForEncEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/key_sizes_128_192_or_256_bits"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/sizeKeyForEncTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp" />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/initVectorEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="Initialization Vector sizes: 128 bits"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/sizeIVForEncTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp" />
    <!--    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vector_init_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="start"
                android:hint="Initialization vector"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/random_key_gen_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/ic_baseline_key_24"
            android:gravity="center"
            android:text="@string/random" />

        <Button
            android:id="@+id/clearForEncBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/ic_baseline_clear_24"
            android:gravity="center"

            android:text="@string/clear" />

    </LinearLayout>

    <Button
        android:id="@+id/encrypt_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/encrypt"

        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:layout_weight="0.5"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cipherTextForEncEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:hint="@string/enter_your_text"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>